--- a/css/style.css
+++ b/css/style.css
@@ -219,13 +219,13 @@ body {
 #lotim {
   border-top: 5px solid #513c28;
   background-color: var(--primary);
-  color: black;
+  color: #fff;
 }
 
 #loteng {
   border-top: 5px solid #513c28;
   background-color: var(--bg);
-  color: var(--primary);
+  color: #fff;
 }
 .slide {
   padding: 30px 0 0 0;
@@ -243,14 +243,6 @@ body {
   grid-area: h;
   text-align: center;
   font-size: 2rem;
-}
-
-.slide .h {
-  width: 80%;
-  height: 7px;
-  color: var(--bg);
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .slide > p {
@@ -274,13 +266,14 @@ body {
   justify-content: space-around;
   flex-wrap: nowrap;
   overflow-x: auto;
+  margin: 0 40px;
 }
 
 .card {
   flex: 0 0 auto;
   margin: 10px 5px;
-  width: 250px;
-  height: 200px;
+  width: 300px;
+  height: 220px;
   border-radius: 20px;
   background: #f5f5f5;
   position: relative;
