--- a/kabupaten/new.css
+++ b/kabupaten/new.css
@@ -64,6 +64,7 @@ header .navbar-logo a span {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .card-item {
